WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198270
Web Inspector: Audit: tests are unable to get the current Audit version
https://bugs.webkit.org/show_bug.cgi?id=198270
Summary
Web Inspector: Audit: tests are unable to get the current Audit version
Devin Rousso
Reported
2019-05-27 00:32:57 PDT
We should be exposing the Audit version number in tests in addition to checking for it as a `supports` value. This way, tests can decide whether they're `{level: "unsupported"}` at runtime, instead of immediately at the start.
Attachments
Patch
(6.94 KB, patch)
2019-05-27 00:39 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(6.95 KB, patch)
2019-05-27 01:15 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(6.96 KB, patch)
2019-05-27 01:21 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(6.97 KB, patch)
2019-05-27 01:21 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-highsierra
(3.08 MB, application/zip)
2019-05-27 02:21 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-highsierra-wk2
(2.68 MB, application/zip)
2019-05-27 02:36 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-highsierra
(2.93 MB, application/zip)
2019-05-27 03:10 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.98 KB, patch)
2019-05-27 11:48 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-05-27 00:39:11 PDT
Created
attachment 370675
[details]
Patch
Devin Rousso
Comment 2
2019-05-27 01:15:21 PDT
Created
attachment 370676
[details]
Patch
Devin Rousso
Comment 3
2019-05-27 01:21:11 PDT
Created
attachment 370677
[details]
Patch
Devin Rousso
Comment 4
2019-05-27 01:21:47 PDT
Created
attachment 370678
[details]
Patch
EWS Watchlist
Comment 5
2019-05-27 02:21:02 PDT
Comment hidden (obsolete)
Comment on
attachment 370678
[details]
Patch
Attachment 370678
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12299483
New failing tests: inspector/audit/run.html
EWS Watchlist
Comment 6
2019-05-27 02:21:04 PDT
Comment hidden (obsolete)
Created
attachment 370682
[details]
Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 7
2019-05-27 02:36:16 PDT
Comment hidden (obsolete)
Comment on
attachment 370678
[details]
Patch
Attachment 370678
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12299504
New failing tests: inspector/audit/run.html
EWS Watchlist
Comment 8
2019-05-27 02:36:18 PDT
Comment hidden (obsolete)
Created
attachment 370684
[details]
Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9
2019-05-27 03:10:52 PDT
Comment hidden (obsolete)
Comment on
attachment 370678
[details]
Patch
Attachment 370678
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12299545
New failing tests: inspector/audit/run.html
EWS Watchlist
Comment 10
2019-05-27 03:10:54 PDT
Comment hidden (obsolete)
Created
attachment 370686
[details]
Archive of layout-test-results from ews115 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-highsierra Platform: Mac OS X 10.13.6
Devin Rousso
Comment 11
2019-05-27 11:48:05 PDT
Created
attachment 370700
[details]
Patch
WebKit Commit Bot
Comment 12
2019-05-30 16:15:15 PDT
Comment on
attachment 370700
[details]
Patch Clearing flags on attachment: 370700 Committed
r245909
: <
https://trac.webkit.org/changeset/245909
>
WebKit Commit Bot
Comment 13
2019-05-30 16:15:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 14
2019-05-30 16:17:02 PDT
<
rdar://problem/51281268
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug