Web Inspector: Audit: tests are unable to get the current Audit version https://bugs.webkit.org/show_bug.cgi?id=198270

Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

Expose the Audit version number through the `WebInspectorObject` that's injected into tests
so that they can decide at runtime whether they're supported (e.g. the `unsupported` result).

* inspector/agents/InspectorAuditAgent.h:
* inspector/agents/InspectorAuditAgent.cpp:
(Inspector::InspectorAuditAgent::populateAuditObject):

LayoutTests:

* inspector/audit/run.html:
* inspector/audit/run-expected.txt:
* inspector/audit/version.html:


Canonical link: https://commits.webkit.org/212415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245909 268f45cc-cd09-0410-ab3c-d52691b4dbfc